# skills-communicate-using-markdown

./: .env.example  .gitignore  IMPLEMENTATION-SUMMARY.md  PROJECT-ANALYSIS.md  QUICKSTART.md  README.md  SUMMARY.md  TESTING.md  demo.sh  install.sh  package.json  server.js  start-monitoring.sh  watcher.js
config/: .tmux.conf  .zshrc_addon
docs/: QUICKSTART.md  VIETNAMESE-GUIDE.md  architecture.md  claude-monitoring.md  md-analyzer-guide.md  workflow.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  env_file.rs  error.rs  git.rs  lib.rs  main.rs  tmux.rs
src-tauri/ui/: index.html
