[package]
name = "orcmate"
version = "0.2.0"
edition = "2021"
description = "OrcMate - Keyboard-First AI Terminal Environment Manager"
license = "MIT"

[[bin]]
name = "orcmate"
path = "src/main.rs"

[lib]
name = "orcmate_core"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
